# piperize

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
src/: lib.rs
tests/: async.rs  sync.rs  visibility.rs
tests/visibility/: fail_private.rs  fail_private.stderr  pass_public.rs
